# SNLP-Eval

./: .gitignore  README.md  analyze_compare.py  analyze_traces.py  compare_docs.py  crash_log.txt  deep_analysis.py  merts_workplan.md.resolved  pyproject.toml  rag team plan.md  step_analysis.py  test_qtf.py  walkthrough.md.resolved
analysis/: plot_results.py  results_summary.md
config/: agents_only.yaml  default.yaml  full_swebench_agentic.yaml  full_swebench_all.yaml  full_swebench_rag.yaml  rag-baseline-week1.yaml  rag_ablation_dense.yaml  rag_ablation_hybrid.yaml  rag_baseline_week1.yaml  rag_proof_of_life.yaml  test_agentic_and_rag.yaml  test_agentic_bm25.yaml  test_agentless.yaml  test_bm25.yaml  test_dense.yaml  test_react.yaml
data/: sanity_stats.json  sanity_stats_report.txt  subset_30.json  subset_30_full.json
docs/: RAG_README.md
expanded_gold_results/: results.csv  summary.json
expanded_gold_results/instances/: astropy__astropy-12907_agentless.json  astropy__astropy-12907_rag_bm25.json  astropy__astropy-12907_rag_dense.json  astropy__astropy-12907_react_agent.json  astropy__astropy-14182_agentless.json  astropy__astropy-14182_rag_bm25.json  astropy__astropy-14182_rag_dense.json  (+147 more)
first_results/: results.csv  summary.json
rag_bm25_results/: results.csv  summary.json
rag_dense_results/: results.csv  summary.json
results/: results.csv
results_old/: summary.json
scripts/: compare_results.py  extract-subset.py  failure_analysis.py  pin_subset.py  verify-subset.py
tests/: test_adapters.py  test_metrics.py  test_react_agent.py  test_reporting.py
(+5604 files in other folders)
